<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <Button
            android:id="@+id/toolbar_cancel_btn"
            android:layout_width="@dimen/btn_weight_small"
            android:layout_height="@dimen/btn_height_small"
            android:layout_marginStart="@dimen/fab_margin"
            android:background="@color/iron"
            android:text="@string/cancel"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/toolbar_OK_btn"
            android:layout_width="@dimen/btn_weight_small"
            android:layout_height="@dimen/btn_height_small"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@color/greenA700"
            android:textColor="@color/white"
            android:text="@string/OK"
            android:layout_gravity="end"
            />

    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>