<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/fragment_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/task_toobar"
            layout="@layout/main_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_item"
                android:layout_marginBottom="@dimen/margin_between_list_item"
                android:orientation="horizontal"
                android:padding="10dp">
                    <TextView
                        android:id="@+id/assigner_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:hint="@string/task_creator_label"
                        android:textSize="@dimen/normal_text_size" />

                    <TextView
                        android:id="@+id/assigner_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/task_assigner_label"
                        android:textSize="@dimen/normal_text_size"
                        android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_item"
                android:layout_marginBottom="@dimen/margin_between_list_item"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/assignee_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:hint="@string/task_assignee_label"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/assignee_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/unknown"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="3dp"-->
                <!--android:layout_marginBottom="3dp"-->
                <!--android:padding="10dp"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/input_status"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:hint="@string/task_status_label"-->
                    <!--android:textSize="@dimen/normal_text_size" />-->

                <!--<Spinner-->
                    <!--android:id="@+id/task_status_spinner"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1" />-->

            <!--</LinearLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_item"
                android:layout_marginBottom="@dimen/margin_between_list_item"
                >

                <EditText
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_title_label" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_item"
                android:layout_marginBottom="@dimen/margin_between_list_item"
                >
                <EditText
                    android:id="@+id/input_detail"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:gravity="top"
                    android:hint="@string/task_detail_label" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/input_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/task_type_label"
                    android:textSize="@dimen/normal_text_size" />

                <Spinner
                    android:id="@+id/task_type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

            </LinearLayout>

            <Button
                android:id="@+id/choose_assignee_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:background="@color/greenA700"
                android:textColor="@color/white"
                android:text="@string/task_choose_assignee_label"
                android:textSize="@dimen/big_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_item"
                android:layout_marginBottom="@dimen/margin_between_list_item"
                >

                <EditText
                    android:id="@+id/input_assignee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_assignee_label"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:background="@color/greenA700"
                android:textColor="@color/white"
                android:text="@string/task_create"
                android:textSize="@dimen/big_text_size" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:textColor="@color/white"
                android:background="@color/secondary"
                android:layout_marginBottom="@dimen/btn_margin"
                android:text="@string/task_cancel"
                android:textSize="@dimen/big_text_size" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>